--- a/samples/Sudoku.CS/MainWindow.xaml
+++ b/samples/Sudoku.CS/MainWindow.xaml
@@ -4,9 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Sudoku.CS"
+        xmlns:tile="clr-namespace:Sudoku.CS.Tile"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <tile:TileViewModel/>
+    </Window.DataContext>
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type tile:TileViewModel}">
+            <tile:TileView />
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
-
-    </Grid>
+        <ContentControl Content="{Binding SampleTile}" />
+</Grid>
 </Window>
