--- a/samples/Sudoku.CS/Tiles/TileView.xaml
+++ b/samples/Sudoku.CS/Tiles/TileView.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="Sudoku.CS.Tile.TileView"
+﻿<UserControl x:Class="Sudoku.CS.Tiles.TileView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:tile="clr-namespace:Sudoku.CS.Tile"
              xmlns:common="clr-namespace:Sudoku.CS.Common"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance tile:TileViewModel, IsDesignTimeCreatable=True}"
