--- a/samples/Sudoku.CS/MainWindow.xaml
+++ b/samples/Sudoku.CS/MainWindow.xaml
@@ -3,17 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Sudoku.CS"
-        xmlns:tiles="clr-namespace:Sudoku.CS.Tiles"
         xmlns:regions="clr-namespace:Sudoku.CS.Regions"
+        xmlns:boards="clr-namespace:Sudoku.CS.Boards"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
-        <regions:RegionViewModel/>
+        <boards:BoardViewModel/>
     </Window.DataContext>
     <Window.Resources>
-        <DataTemplate DataType="{x:Type regions:RegionViewModel}">
-            <regions:RegionView />
+        <DataTemplate DataType="{x:Type boards:BoardViewModel}">
+            <boards:BoardView />
         </DataTemplate>
     </Window.Resources>
     <Grid>
