--- a/samples/Sudoku.CS/Tiles/TileView.xaml
+++ b/samples/Sudoku.CS/Tiles/TileView.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:common="clr-namespace:Sudoku.CS.Common"
+             xmlns:tiles="clr-namespace:Sudoku.CS.Tiles"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance tile:TileViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance tiles:TileViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="100" d:DesignWidth="100">
     <!--<UserControl.DataContext>
         <ViewModels:TileViewModel/>
